--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </li>
                         <li><a href="mailto:EZhao1997@outlook.com" target="_blank" class="fa fa-paper-plane"
                                 title="给我发邮件"><span class="label">某兰</span></a></li>
-                        <li><a href="https://github.com/enl-z/" target="_blank" class="fa-brands fa-github"
+                        <li><a href="https://github.com/enlzhao/" target="_blank" class="fa-brands fa-github"
                                 title="我的 GitHub"><span class="label">某兰</span></a></li>
                         <li><a href="https://note.enlzhao.com/link/#blog-notebook" target="_blank"
                                 class="fa-solid fa-people-group" title="一些朋友"><span class="label">某兰</span></a></li>
