--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Enl _ Z | 某 兰</title>
+    <title>EnlZhao | 某 兰</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -33,11 +33,11 @@
                 <p>&nbsp;&bull;&nbsp; Trying to be better! &nbsp;&bull;&nbsp;</p>
                 <nav>
                     <ul>
-                        <li><a href="https://blog.enlzhao.com/" target="_blank" class="icon solid fa-blog"
+                        <li><a href="https://enlzhao.github.io/Blog" target="_blank" class="icon solid fa-blog"
                                 title="博客！(一口吃掉)"><span class="label">某兰</span></a></li>
-                        <li><a href="https://note.enlzhao.com/" target="_blank" class="icon solid fa-book"
+                        <li><a href="https://enlzhao.github.io/Notebook" target="_blank" class="icon solid fa-book"
                                 title="来看我的笔记本"><span class="label">某兰</span></a></li>
-                        <li><a href="https://enlzhao.com/PowerPoint/" target="_blank" class="icon solid fa-presentation-screen"
+                        <li><a href="https://enlzhao.github.io/PowerPoint/" target="_blank" class="icon solid fa-presentation-screen"
                             title="尝试一些好玩的 PPT"><span class="label">某兰</span></a></li>
                         <li><a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=1613715141&website=www.oicqzone.com"
                                 target="_blank" class="fa-brands fa-qq" title="加我 QQ"><span class="label">某兰</span></a>
@@ -46,9 +46,9 @@
                                 title="给我发邮件"><span class="label">某兰</span></a></li>
                         <li><a href="https://github.com/enlzhao/" target="_blank" class="fa-brands fa-github"
                                 title="我的 GitHub"><span class="label">某兰</span></a></li>
-                        <li><a href="https://note.enlzhao.com/link/#blog-notebook" target="_blank"
+                        <li><a href="https://enlzhao.github.io/Notebook/link/" target="_blank"
                                 class="fa-solid fa-people-group" title="一些朋友"><span class="label">某兰</span></a></li>
-                        <li><a href="https://blog.enlzhao.com/about/" target="_blank" class="fa-solid fa-person"
+                        <li><a href="https://enlzhao.github.io/Blog/about/" target="_blank" class="fa-solid fa-person"
                                 title="关于我"><span class="label">某兰</span></a></li>
                         <li>
                             <a class="fa fa-music" title="Golden_Hour | 播放/暂停" onclick="playPause()">
@@ -63,7 +63,7 @@
         </header>
         <!-- Footer -->
         <footer id="footer">
-            <span class="copyright">Copyright &copy; 2022 <a href="https://enlzhao.com/" target="_blank"
+            <span class="copyright">Copyright &copy; 2022 - 2023 <a href="https://enlzhao.github.io/" target="_blank"
                     rel="noopener">某兰</a> 丨<a href="http://home.qste.com/" target="_blank"
                     rel="nofollow">鸣谢楠格</a></span>
         </footer>
@@ -76,7 +76,7 @@
     </script>
 
     <script>
-        console.log("%c%c某兰%chttps://enlzhao.com", "line-height:28px;", "line-height:28px;padding:4px;background:#2ccbe6;color:#FADFA3;font-size:14px;", "padding:4px 4px 4px 2px;background:#ff146d;color:green;line-height:28px;font-size:12px;");
+        console.log("%c%c某兰%chttps://enlzhao.github.io", "line-height:28px;", "line-height:28px;padding:4px;background:#2ccbe6;color:#FADFA3;font-size:14px;", "padding:4px 4px 4px 2px;background:#ff146d;color:green;line-height:28px;font-size:12px;");
     </script>
     <script disable-devtool-auto src='http://fastly.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'
         disable-menu='false'></script>
