--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>EnlZhao | 某 兰</title>
+    <title>EnlZhao</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -29,7 +29,7 @@
 
             <!-- Header -->
             <header id="header">
-                <h1>Enl_Z | 某兰</h1>
+                <h1>EnlZhao | 某兰</h1>
                 <p>&nbsp;&bull;&nbsp; Trying to be better! &nbsp;&bull;&nbsp;</p>
                 <nav>
                     <ul>
