--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                         <li>
                             <a class="fa fa-music" title="Golden_Hour | 播放/暂停" onclick="playPause()">
                                 <span class="label">
-                                    <audio id="audio1" src="./music/golden_hour.mp3" preload="auto" loop="loop"></audio>
+                                    <!-- <audio id="audio1" src="./music/golden_hour.mp3" preload="auto" loop="loop"></audio> -->
+                                    <audio id="audio1" src="./music/用什么把你留下.m4a" preload="auto" loop="loop"></audio>
                                 </span>
                             </a>
                         </li>
