--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <li><a href="https://enlzhao.github.io/Blog/about/" target="_blank" class="fa-solid fa-person"
                                 title="关于我"><span class="label">某兰</span></a></li>
                         <li>
-                            <a class="fa fa-music" title="Golden_Hour | 播放/暂停" onclick="playPause()">
+                            <a class="fa fa-music" title="用什么把你留下 | 播放/暂停" onclick="playPause()">
                                 <span class="label">
                                     <!-- <audio id="audio1" src="./music/golden_hour.mp3" preload="auto" loop="loop"></audio> -->
                                     <audio id="audio1" src="./music/用什么把你留下.m4a" preload="auto" loop="loop"></audio>
