[code]: font modify

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name='description' content='某兰，某兰个人导航页，个人主页。'>
     <meta name='keywords' content='某兰,某兰主页'>
     <meta name='robots' content='index,follow'>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel='stylesheet' href='assets/css/all.min.css'>
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
@@ -42,7 +42,7 @@
                         <li><a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=1613715141&website=www.oicqzone.com"
                                 target="_blank" class="fa-brands fa-qq" title="加我 QQ"><span class="label">某兰</span></a>
                         </li>
-                        <li><a href="mailto:EZhao1997@outlook.com" target="_blank" class="fa fa-paper-plane"
+                        <li><a href="mailto:hengzhao2002@gmail.com" target="_blank" class="fa fa-paper-plane"
                                 title="给我发邮件"><span class="label">某兰</span></a></li>
                         <li><a href="https://github.com/enlzhao/" target="_blank" class="fa-brands fa-github"
                                 title="我的 GitHub"><span class="label">某兰</span></a></li>
@@ -53,7 +53,6 @@
                         <li>
                             <a class="fa fa-music" title="用什么把你留下 | 播放/暂停" onclick="playPause()">
                                 <span class="label">
-                                    <!-- <audio id="audio1" src="./music/golden_hour.mp3" preload="auto" loop="loop"></audio> -->
                                     <audio id="audio1" src="./music/用什么把你留下.m4a" preload="auto" loop="loop"></audio>
                                 </span>
                             </a>
